--- a/css/nav-footer.css
+++ b/css/nav-footer.css
@@ -4,7 +4,7 @@
     background: linear-gradient(270deg,
             rgba(110, 82, 171, 0.6),
             rgba(255, 204, 128, 0.6)),
-        url(../img/nav-bg.png);
+        url(../img/background/nav-bg.png);
 
     padding: 1rem;
 
