Melhoria da estilização
Removendo e corrigindo CSS desnecessário

--- a/css/nav-footer.css
+++ b/css/nav-footer.css
@@ -31,7 +31,7 @@
     gap: 1rem;
 }
 
-.nav .col a {
+/* .nav .col a {
     display: flex;
     align-items: center;
 
@@ -53,7 +53,7 @@
     border-right: 1px solid #A9A6A6;
     margin-right: 4px;
     padding-right: 4px;
-}
+} */
 
 /* Fim da Nav */
 
