--- a/css/style.css
+++ b/css/style.css
@@ -60,3 +60,22 @@ input[type="search"]
     width: 100%;
 }
 
+
+.caixa {
+    background-color: white;
+    color: black;
+
+    height: max-content;
+    width: 100%;
+
+    padding: 5px 0;
+    border: 5px solid transparent;
+    border-radius: 25px;
+
+    background:
+        linear-gradient(#fff, #fff) padding-box,
+        linear-gradient(to bottom, #ffcc80, #6e52ab) border-box;
+    ;
+
+    box-shadow: 4px 4px 20px rgba(0, 0, 0, .6);
+}
