--- a/css/finalizar-compra.css
+++ b/css/finalizar-compra.css
@@ -34,6 +34,7 @@ input[type="search"]{
 
 .pedido-info, .pedido-pagamento {
     text-align: center;
+    width: 100%;
 }
 
 .pedido-info h3, .pedido-pagamento h3 {
