--- a/css/login-cadastro.css
+++ b/css/login-cadastro.css
@@ -6,6 +6,14 @@ form{
     gap: 25px;
 }
 
+.login-cadastro{
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
+    gap: 100px;
+    margin-bottom: 700px;
+}
+
 h2{
     text-align: center;
     font-size: 26px;
@@ -13,27 +21,37 @@ h2{
     margin-bottom: 10px;
 }
 
+
+
 input[type="email"], 
-input[type="password"]{
+input[type="password"],
+input[type="text"]{
     outline: none;
-    /* border: 1px solid black;
-    border-radius: 25px; */
 
     width: 400px;
-    padding: 0 10px;
+    padding: 10px 10px;
 
     font-size: 20px;
 
 }
 
-input[type="button"]{
+input[type="submit"]{
 
     align-self: center;
     text-align: center;
+    margin-top: 30px;
 
     width: 200px;
     background-color: #7B429B;
     color: white;
+}
 
+.caixa{
+    padding: 20px 20px;
+    gap: 40px;
+}
 
+.caixa-cadastro{
+    height: 600px; 
+    /* gap: 60px; */
 }
