--- a/includes/footer.html
+++ b/includes/footer.html
@@ -4,7 +4,7 @@
 
         <a href="#">
 
-            <img src="img/logo/Logo.png" alt="Logo">
+            <img src="assets/img/logo/Logo.png" alt="Logo">
 
         </a>
 
@@ -29,9 +29,9 @@
         <h4>Redes sociais</h4>
         <div class="footer-sociais">
 
-            <a href="#"><img src="img/icon/Whats.png" alt="Contato atraves do WhatsApp"></a>
-            <a href="#"><img src="img/icon/Facebook.png" alt="Contato atraves do Facebook"></a>
-            <a href="#"><img src="img/icon/Insta.png" alt="Contato atraves do Inta"></a>
+            <a href="#"><img src="assets/img/icon/Whats.png" alt="Contato atraves do WhatsApp"></a>
+            <a href="#"><img src="assets/img/icon/Facebook.png" alt="Contato atraves do Facebook"></a>
+            <a href="#"><img src="assets/img/icon/Insta.png" alt="Contato atraves do Inta"></a>
 
         </div>
 
