--- a/assets/css/carrinho.css
+++ b/assets/css/carrinho.css
@@ -3,20 +3,20 @@ h1 {
     margin: 20px;
 }
 
-.carrinho {
+#carrinho .carrinho {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.caixa {
+#carrinho .caixa {
     width: 80%;
 
     padding: 30px;
     margin: 20px;
 }
 
-.caixa tr {
+#carrinho .caixa tr {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -31,7 +31,7 @@ th {
 td {
     font-size: 24px;
 }
-
+ 
 th:not(:first-child), td:not(:first-child) {
     flex: 3;
 }
@@ -66,6 +66,6 @@ th, td {
     background-image: url(../img/icon/icon-deletar-red.png);
 }
 
-button {
+#carrinho button {
     margin: 30px;
 }
