Pequenos ajustes do css, links e readme
Ajustado o alinhamento do texto do footer

Criado o Link do quem somos no footer

Trocado a ordem do quem somos e parceiros no footer

Ajustado o campo de código no readme

--- a/assets/css/produtos.css
+++ b/assets/css/produtos.css
@@ -94,6 +94,10 @@ input[type="search"]{
     cursor: pointer;
 }
 
+#produtos .lista-produtos .item img {
+    max-width: 200px;
+}
+
 /* adicionar ao carrinho */
 #produtos .lista-produtos .item .adicionar {
     margin-top: 10px;
