--- a/assets/css/nav-footer.css
+++ b/assets/css/nav-footer.css
@@ -65,7 +65,7 @@
 
     display: flex;
     justify-content: space-around;
-    align-items: center;
+    align-items: flex-start;
     text-align: center;
 
     padding: 1rem 0;
