Ajeitado o caminho do css

--- a/assets/css/carrinho.css
+++ b/assets/css/carrinho.css
@@ -3,7 +3,7 @@ h1 {
     margin: 20px;
 }
 
-#carrinho .carrinho {
+#carrinho, .carrinho {
     display: flex;
     flex-direction: column;
     align-items: center;
