Pequeno ajusto na página de produtos

--- a/assets/css/produtos.css
+++ b/assets/css/produtos.css
@@ -60,9 +60,8 @@ input[type="search"]{
 #produtos .lista-produtos {
     margin: 30px 0;
     /* border: 1px solid tomato; */
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
     gap: 20px;
 }
 
