--- a/assets/css/produtos.css
+++ b/assets/css/produtos.css
@@ -60,11 +60,11 @@ input[type="search"]{
 #produtos .lista-produtos {
     margin: 30px 0;
     /* border: 1px solid tomato; */
-    display: flex;
+    /* display: flex;
     flex-wrap: wrap;
-    justify-content: center;
-    /* display: grid;
-    grid-template-columns: repeat(3, 1fr); */
+    justify-content: center; */
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
     gap: 20px;
 }
 
@@ -74,6 +74,9 @@ input[type="search"]{
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    text-align: center;
+    text-decoration: none;
 
     background:
         linear-gradient(#B49B8A, #B49B8A) padding-box,
@@ -97,6 +100,7 @@ input[type="search"]{
 }
 
 #produtos .lista-produtos .item img {
+    width: 100%;
     max-width: 200px;
 }
 
