--- a/assets/css/nav-footer.css
+++ b/assets/css/nav-footer.css
@@ -31,8 +31,7 @@
 }
 
 #menu .nav .row .col .botao-geral:hover {
-    position: relative;
-    bottom: 2px;
+    
 }
 
 #menu .nav .col h1 {
@@ -51,35 +50,11 @@
     gap: 1rem;
 }
 
-/* #menu .nav .col a {
-    display: flex;
-    align-items: center;
-
-    text-decoration: none;
-
-    font-size: 24px;
-    font-family: "Alice", sans-serif;
-
-    background-color: white;
-    color: black;
-
-    border: 1px solid black;
-    border-radius: 25px;
-
-    padding: 8px 12px;
-}
-
-#menu .nav .col a img {
-    border-right: 1px solid #A9A6A6;
-    margin-right: 4px;
-    padding-right: 4px;
-} */
-
 /* Fim da Nav */
 
 /* começo do Footer  */
 
-.footer {
+#footer {
     background-color: #241D33;
     color: white;
 
@@ -93,29 +68,34 @@
     box-shadow: 0 -15px 30px rgba(0, 0, 0, .25);
 }
 
-.footer h4 {
+#footer h4 {
     font-size: 24px;
+    color: #ffcc80;
 }
 
-.footer p {
+#footer p {
     font-size: 20px;
 }
 
-.footer a {
+#footer a {
     text-decoration: none;
     color: white;
 }
 
-.footer .col {
+#footer .col {
     display: flex;
     flex-direction: column;
     gap: 1rem;
 }
 
-.footer-sociais {
-    display: flex;
-    gap: 4px;
+#footer .parceiros div{
+    gap: 20px;
 }
+
+#footer .parceiros div a:hover{
+    color: #ffcc80;
+}
+
 
 /* Fim do Footer */
 
@@ -131,24 +111,25 @@
         font-size: 60px;
     }
 
-    .footer {
+    #footer {
         flex-direction: column;
         gap: 24px;
         padding-bottom: 240px;        
     }
 
-    .footer h4 {
+    #footer h4 {
         font-size: 16px;
     }
-    .footer p {
+    #footer p {
         font-size: 12px;
     }
 
-    .footer-sociais img {
+    #footer-sociais img {
         width: 40px;
     }
 
-    .footer .col > a img{
+    #footer .col > a img{
         display: none;
     }
 }
+
