--- a/assets/css/produtos.css
+++ b/assets/css/produtos.css
@@ -74,6 +74,7 @@ input[type="search"] {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-between;
 
     text-align: center;
     text-decoration: none;
