Login conectado ao banco, iniciado e quase finalizado o cadastro de usuario com o banco
Co-authored-by: Erick Gusson <erickgusson@users.noreply.github.com>

--- a/assets/css/login-cadastro.css
+++ b/assets/css/login-cadastro.css
@@ -22,6 +22,11 @@
     margin-bottom: 10px;
 }
 
+#login-cadastro .login-mensagem {
+    display: flex;
+    justify-content: center;
+}
+
 #login-cadastro .dados-pessoais{
     margin-top: 50px;
 }
