Cadastro de usuario com o banco finalizado com sucesso!!! Amem 🙏
Co-authored-by: RenonHG <RenonHG@users.noreply.github.com>

--- a/assets/css/nav-footer.css
+++ b/assets/css/nav-footer.css
@@ -48,7 +48,8 @@
 
 #menu .nav .logo{
     display: grid;
-    grid-template-columns: 1fr 3fr;
+    grid-template-columns: 1fr 6fr 1fr;
+    place-items: center;
     /* justify-content: space-evenly;     */
 }
 
