--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -74,28 +74,19 @@
     gap: 20px 0;
 }
 
-#home-produtos .produtos .produtos-bottom figure {
+#home-produtos .produtos .produtos-bottom a {
     display: flex;
     flex-direction: column;
     align-items: center;
 
-    background-color: #B49B8A;
-
-    /* border: 2px solid white; */
-    border-radius: 25px;
-
-    padding: 8px 4px;
-
-    box-shadow: 4px 4px 20px rgba(0, 0, 0, .6);
-
-    transition: 500ms;
+    text-decoration: none;
 }
 
-#home-produtos .produtos .produtos-bottom figure:hover {
+#home-produtos .produtos .produtos-bottom a:hover {
     transform: scale(1.1);
 }
 
-#home-produtos .produtos .produtos-bottom figure img {
+#home-produtos .produtos .produtos-bottom a img {
     width: 280px;
     height: 280px;
 }
@@ -114,7 +105,7 @@
         height: 20px;
     }
 
-    #home-produtos .produtos .produtos-bottom figure img {
+    #home-produtos .produtos .produtos-bottom a img {
         width: 250px;
         height: 250px;
     }
