--- a/assets/css/nav-footer.css
+++ b/assets/css/nav-footer.css
@@ -54,15 +54,27 @@
     /* justify-content: space-evenly;     */
 }
 
-#menu .dropdown {
+#menu .nav .logo .col a img {
+    border-radius: 100%;
+    box-shadow: 0px 0px 100px #ffcc80;
+}
+
+/* #menu .dropdown {
     position: relative;
     display: inline-block;
     justify-content: center;
-}
+} */
 
-#menu .dropdown > img {
+/* #menu .dropdown > img {
     border-radius: 25px;
-    /* border-radius: 100%; */
+    border-radius: 100%;
+} */
+
+#menu button > img {
+    border-radius: 100%;
+    border-width: 2px;
+    border-color: #ffcc80;
+    box-shadow: 0px 0px 10px #ffcc80;
 }
 
 #menu .dropdown-conteudo {
