Validações gerais no funcionamento do login (Página de login, carrinho e produtos)
Cadastro de produtros front-end quase finalizado

Co-authored-by: RenonHG <RenonHG@users.noreply.github.com>

--- a/assets/css/produtos.css
+++ b/assets/css/produtos.css
@@ -95,6 +95,11 @@ input[type="search"] {
     transition: 500ms;
 }
 
+#produtos .lista-produtos .item a {
+    text-decoration: none;
+    color: black;
+}
+
 #produtos .lista-produtos .item:hover {
     transform: scale(1.05);
     cursor: pointer;
