--- a/assets/css/cadastrar-produto.css
+++ b/assets/css/cadastrar-produto.css
@@ -46,11 +46,12 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
-    
+    color: grey;
 }
 #cadastro-produto .esquerda span textarea{
     border-top: 1px solid grey;
-    padding-top: 10px;
+    padding: 10px 30px;
+    
     outline: none;
     line-height: 20px;
     font-size: 16px;
