--- a/assets/css/cadastrar-produto.css
+++ b/assets/css/cadastrar-produto.css
@@ -50,7 +50,9 @@
 }
 #cadastro-produto .esquerda span textarea{
     border-top: 1px solid grey;
-    padding: 10px 30px;
+    padding: 10px;
+
+    width: 100%;
     
     outline: none;
     line-height: 20px;
