Editar perfil front-end concluido
Carrinho quase concluido

Iniciado a edição de produtos

Corrigido problemas de conexão

Co-authored-by: RenonHG <RenonHG@users.noreply.github.com>

--- a/assets/css/carrinho.css
+++ b/assets/css/carrinho.css
@@ -46,6 +46,16 @@ th, td {
     gap: 20px;
 }
 
+th a {
+    text-decoration: none;
+    transition: 500ms;
+    color: black;
+}
+
+th a:hover {
+    color: red;
+}
+
 #carrinho .caixa-produto{
     max-width: 125px;
     max-height: 125px;
