--- a/assets/css/perfil.css
+++ b/assets/css/perfil.css
@@ -33,20 +33,15 @@
 #editar-perfil input[type="number"]
 {
     outline: none;
-
     width: 400px;
     padding: 10px 10px;
-
     font-size: 20px;
 }
 
 #editar-perfil input[type="submit"]{
-
     align-self: center;
     text-align: center;
-    margin-top: 30px;
-
-    
+    margin-top: 30px;    
 }
 
 #editar-perfil form.caixa{
@@ -54,59 +49,62 @@
     gap: 40px;
 }
 
-#editar-perfil form.caixa-editar{
-    height: max-content;
-    width: max-content;
-}
-
-/* Esqueci minha senha */
-#editar-perfil form a{
-    text-align: center;
-    margin-top: -30px;
-
-    text-decoration: none;
-    color: rgba(0, 0, 0, 0.8);
-
-    transition: 300ms;
-} 
-
-#editar-perfil form a:hover{
-    color: #7B429B;
-    font-weight: bold;
-    font-size: 17px;
-}
 
 /* --------------------- */
 
+
 #editar-perfil form .campos{
     display: flex;
-    gap: 20px;
+    column-gap: 20px;
+    margin-left: 20px;
 }
 
-#editar-perfil form .botao-geral{
-    width: 400px;
-    
+#editar-perfil form .dados-pessoais .campos{
+    display: flex;
+    column-gap: 120px;
 }
 
-/* ------------------ */
-.container-1 {
+#editar-perfil form .botao-click{
+    align-items: center;
+}
+/* ---------GRID --------- */
+.container-perfil {
     display: grid;
-    grid-template-columns: 1fr 3fr;
-    grid-template-rows: 200px 500px 200px;
+    width: 100%;
+    gap: 20px;
+    grid-template-rows: 300px 500px;
     grid-template-areas:
-      "cabecalho cabecalho cabecalho""menu-lateral principal principal""rodape rodape rodape";
+      "foto-perfil dados-user"
+      "dados-pessoais dados-pessoais";
+    
   }
 
- 
-  
-  .menu-lateral {
-    grid-area: menu-lateral;
+  .foto-perfil {
+    display: grid;
+    justify-content: space-evenly;
+    align-content: space-evenly;
+    justify-items: stretch;
+    grid-area: foto-perfil;
+
   }
   
-  .principal {
-    grid-area: principal;
+  .dados-user {
+    display: grid;
+    justify-content: space-evenly;
+    align-content: space-evenly;
+    justify-items: stretch;
+    grid-area: dados-user;
   }
   
-  .rodape {
-    grid-area: rodape;
+  .dados-pessoais {
+    display: grid;
+    justify-content: space-evenly;
+    align-content: space-evenly;
+    justify-items: stretch;
+    grid-area: dados-pessoais;
+  }
+
+  .dados-pessoais .campos{
+    display: flex;
+    justify-content: space-around;
   }
