--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,6 +54,7 @@ h1 {
 
 /* Botão pesquisar */
 .botao-geral img {
+    width: 32px;
     border-right: 1px solid #a9a6a6;
     margin-right: 8px;
     padding-right: 8px;
